--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <div class="build__content">
                 <div class="build__card">
                     <div class="card-build">
-                        <img src="./img/build.jpg" alt="build">
+                        <img src="./img/Build.jpg" alt="build">
                     </div>
                 </div>
                 <div class="build__text">
@@ -136,7 +136,7 @@
                 </div>
                 <div class="update__card">
                     <div class="card">
-                        <img src="./img/update.jpg" alt="update">
+                        <img src="./img/Update.jpg" alt="update">
                     </div>
                 </div>
             </div>
